--- a/website/newsletter/167/index.mdx
+++ b/website/newsletter/167/index.mdx
@@ -35,6 +35,29 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 ## ⚛️ React {#react}
 
 - 💸 [Take the Developer Nation Survey - A virtual goody bag packed with free data, promo codes for event tickets, courses, tools & platforms is waiting at the end of the survey!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad3)
+- 📜 [Explaining React's cache Function](https://unicorn-utterances.com/posts/explaining-reacts-cache-function)
+- 📜 [What is React Suspense and Async Rendering?](https://unicorn-utterances.com/posts/what-is-react-suspense-and-async-rendering)
+- 📜 [Announcing React Hydration Overlay - Easily Squash Hydration Errors](https://www.builder.io/blog/announcing-react-hydration-overlay): Adds a handy overlay to Next.js sites via a Webpack Plugin that helps with debugging hydration errors.
+- 📜 [How to Get Rid of “Window is Not Defined” and Hydration Mismatch Errors in Next.js](https://medium.com/@eric.burel/how-to-get-rid-of-window-is-not-defined-and-hydration-mismatch-errors-in-next-js-567cc51b4a17)
+- 📜 [React State Management in 2024](https://dev.to/nguyenhongphat0/react-state-management-in-2024-5e7l): Good overview of different approaches to state management - Reducer-based, Atom-based, and Mutable-based.
+- 📜 [React Tricks: Fast, Fit and Fun](https://molefrog.com/notes/react-tricks?utm_source=tldrwebdev): Lessons learned from building Wouter, a React router with 2.1 Kb bundle size.
+- 📜 [Upcoming React and React-Native Conferences for 2024](https://thoughtbot.com/blog/upcoming-react-and-react-native-conferences-for-2024)
+- 📜 [What is Reactivity?](https://unicorn-utterances.com/posts/what-is-reactivity): Very good explanation of what Reactivity means exactly, including nice visualizations and code samples.
+- 📜 [TasteJS Movies - A non-trivial Movies app built in multiple frameworks](https://tastejs.com/movies/): The same app built with Next, Angular, NuxtJS, Astro, SolidJS, Svelte, …
+- 📜 [Migrating from Jest to Vitest for your React Application](https://dev.to/opensauced/migrating-from-jest-to-vitest-for-your-react-application-1b75)
+- 📖 [Updated Next.js testing docs](https://nextjs.org/docs/app/building-your-application/testing)
+- 📒 [New book: React Interview Guide: Learn all you need to know to ace any React interview and land your dream job](https://www.amazon.com/React-Interview-Guide-Learn-interview/dp/1803241519/ref=tmm_pap_swatch_0?link_from_packtlink=yes)
+- 📦 [Remix 2.4.0 with client data](https://github.com/remix-run/remix/blob/main/CHANGELOG.md#v240): The first Remix release to land their Client Data RFC, which allows querying data APIs directly from the client (skipping the server).
+- 📦 [next-export-i18n 3.0 - App Router support](https://github.com/martinkr/next-export-i18n)
+- 🎥 [React server components from scratch](https://www.youtube.com/watch?v=MaebEqhZR84): Best way to really understand something is to build it from scratch. This is a 20 minute video of doing just that for RSC.
+- 📦 [Remix PR - unstable_serverBundles to split your route tree](https://github.com/remix-run/remix/pull/8332)
+- [React-Glow - mouse-tracing glow effect](https://github.com/codaworks/react-glow)
+- [Netlify’s Disingenuous Survey-based Attack on Next.js (and Eleventy, too)](https://www.zachleat.com/web/netlify-and-nextjs/) + [https://www.netlify.com/pdf/the-state-of-web-development-2023.pdf/](https://www.netlify.com/pdf/the-state-of-web-development-2023.pdf/) (keep it private)
+- [https://x.com/asidorenko\_/status/1737175314055278778?s=20](https://x.com/asidorenko_/status/1737175314055278778?s=20)
+- [React Docs Update](https://github.com/reactwg/server-components/discussions/7) + https://twitter.com/SzymonRybczak/status/1736784354213335184
+- [Access the Search Params of a Request in Remix](https://sergiodxa.com/tutorials/access-the-search-params-of-a-request-in-remix)
+- [The Complete Guide To React Suspense](https://www.debugbear.com/blog/guide-to-react-suspense)
+- XState React 4.0? https://twitter.com/DavidKPiano/status/1735678671019454757
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -62,7 +85,27 @@ _PS: Subscribe to our_ [**_YouTube channel_**](https://www.youtube.com/@notjustd
 
 ## 📱 React-Native {#react-native}
 
+Unistyles 2.0
+
+Unistyles is a cross-platform styling library. It is built as a superset of StyleSheet (if you use React Native, you’re probably familiar with StyleSheet.create …) similar to how TypeScript is a superset of JavaScript. First released just three months ago, it has since gained over 500 stars on GitHub and is now approaching its second major version with enhanced TypeScript types, no dependence on React Context anymore, and fresh C++ bindings to boost performance. A very interesting new feature is the addition of plugin support, which could enable some interesting new use cases.
+
+---
+
 - 💸 [AnimateReactNative - Premium and Custom React Native animations](https://www.animatereactnative.com/?utm_source=thisweekinreact.com)
+- 📖 [Expo Guide on How to use the New Architecture](https://docs.expo.dev/guides/new-architecture/): All expo-\* packages with the exception of expo-updates already support the new architecture. Support for `expo-updates` is planned for Expo SDK 51.
+- 📖 [Introducing docs.infinite.red — A New Home for Infinite Red’s Documentation](https://shift.infinite.red/introducing-docs-infinite-red-a-new-home-for-infinite-reds-documentation-6f4b25f7a1a4): New docs site for Ignite, Reactotron, RN MLKit, Gluegun
+- 🐦 [Expo visualized](https://x.com/Baconbrix/status/1736791464267403276): A nice visualization of how JavaScript files are transformed in parallel across all threads to bundle as fast as possible
+- 📜 [Xcode 15.1 image is now available on EAS Build](https://expo.dev/changelog/2023/12-19-eas-build-xcode-15.1-image): Xcode 15.1 primarily fixes bugs.
+- 📜 [Building AR face masks in React Native](https://blog.logrocket.com/building-ar-face-masks-react-native/): How to load and apply 3D face masks using DeepAR
+- 📜 [Optimizing Performance in React-Native: Tips and Techniques](https://thoughtbot.com/blog/optimizing-performance-in-react-native-tips-and-techniques): Tutorial on how to apply memoization, use virtualized lists, optimize images, debounce, optimize bundle size and network requests
+- 📜 [Universal Medusa: The why, when and how of universal e-commerce apps with Medusa.js, Expo and Next.js](https://bidah.hashnode.dev/universal-medusa-the-why-when-and-how-of-universal-e-commerce-apps-with-medusajs-expo-and-nextjs)
+- 📦 [React Native 0.73.1 is out](https://github.com/facebook/react-native/releases/tag/v0.73.1): Adds `enableNetworkInspector` to enable Network panel and CDP handlers in inspector proxy, bumps CLI to 12.3.0
+- 📦 [React Native Windows 0.73.1 is out](https://github.com/microsoft/react-native-windows/releases/tag/react-native-windows_v0.73.1): Brings React Native 0.73.0 to Windows
+- 🎥 [Ignite 9 video overview by Jamon Holmgren](https://youtu.be/QmkMsUYrTlk?si=p9rvLM-EMggZNcft) (11 minutes)
+- 🎙️ [Rocket Ship #021 - The React Native IDE with Krzysztof Magiera](https://podcast.galaxies.dev/episodes/021-the-react-native-ide-with-krzysztof-magiera)
+- 🎙️ [React Native Radio 283 - From side-project to acquisition!](https://reactnativeradio.com/episodes/rnr-283-from-side-hustle-to-top-charts-with-simon-reggiani) (30 minutes)
+
+https://twitter.com/Baconbrix/status/1735011941431595149
 
 ---
 
@@ -70,11 +113,38 @@ _PS: Subscribe to our_ [**_YouTube channel_**](https://www.youtube.com/@notjustd
 
 <Todo />
 
----
+- 📜 [HTML: The Bad Parts](https://www.htmhell.dev/adventcalendar/2023/13/)
+- 📜 [CSS @scope](https://12daysofweb.dev/2023/css-scope/): A better way to scope component styles
+- 📜 ["Why would I choose Panda CSS?"](https://www.astahmer.dev/posts/why-would-i-choose-panda-css)
+- 📜 [The await event horizon in JavaScript](https://frontside.com/blog/2023-12-11-await-event-horizon/)
+- 📜 [New to the web platform in December](https://web.dev/blog/web-platform-12-2023)
+- 📖 [The web is getting observables:](https://github.com/WICG/observable) Observable API proposal for more ergonomic and composable event handling
+- 📖 [tsdocs.dev - browse type documentation for npm packages](https://tsdocs.dev/)
+- 📦 [Tailwind CSS v3.4: Dynamic viewport units, :has() support, balanced headlines, subgrid, and more](https://tailwindcss.com/blog/tailwindcss-v3-4)
+- 📦 [Node.js v21.5.0 is out:](https://nodejs.org/en/blog/release/v21.5.0) new dependency to parse JSON efficiently, --trace-promises flag to help debug promises
+- 📦 [Eleventy 3.0 alpha - ESM/async config support](https://www.zachleat.com/web/eleventy-v3-alpha/): Upcoming major release of the static site generator
+- 📦 [SvelteKit 2.0 - Vite 5, shallow routing, prepating for Svelte 5](https://svelte.dev/blog/sveltekit-2)
+- 📦 [date-fns 3.0](https://blog.date-fns.org/v3-is-out/): Now in 100% TypeScript
+- 📦 [Deno 1.39 - The Return of WebGPU](https://deno.com/blog/v1.39)
+- 📦 [Rsbuild 0.2](https://github.com/web-infra-dev/rsbuild/releases/tag/v0.2.0) + [https://twitter.com/jait_chen/status/1734399660121571335](https://twitter.com/jait_chen/status/1734399660121571335)
+- 📦 [Node Version Manager Desktop - desktop app to manage node.js versions.](https://github.com/1111mp/nvm-desktop?utm_source=substack&utm_medium=email)
+- 📦 [Syntax.js 2.0 - lightweight, and easy-to-use, JavaScript library for code syntax highlighting](https://github.com/williamtroup/Syntax.js/releases/tag/2.0.0)
+- 📦 [TSDiagram - Create diagrams and plan your code with TypeScript](https://github.com/3rd/tsdiagram)
+- 📦 [Effection 3.0 - Structured Concurrency and Effects for JavaScript](https://frontside.com/blog/2023-12-18-announcing-effection-v3/)
+- 📦 [Spotlight: Sentry for Development](https://blog.sentry.io/sentry-for-development/) + [https://twitter.com/astrodotbuild/status/1732432683018469481](https://twitter.com/astrodotbuild/status/1732432683018469481)
+- 📦 [Tailwind CSS v3.4: Dynamic viewport units, :has() support, balanced headlines, subgrid, and more](https://tailwindcss.com/blog/tailwindcss-v3-4)
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/sebastienlorber/status/1737380479383277636
+https://twitter.com/sebastienlorber/status/1736652013897744548
+https://twitter.com/sebastienlorber/status/1735456385528467637
+https://twitter.com/sebastienlorber/status/1734897835521331451
+https://twitter.com/trashh_dev/status/1735315396197294467
+https://twitter.com/flaviocopes/status/1735563563643674863
+https://twitter.com/sseraphini/status/1735625668124094873
+https://twitter.com/tlakomy/status/1735805767653937610
+https://twitter.com/shuttle_dev/status/1736491184468422957
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
