--- a/website/newsletter/167/index.mdx
+++ b/website/newsletter/167/index.mdx
@@ -85,7 +85,9 @@ _PS: Subscribe to our_ [**_YouTube channel_**](https://www.youtube.com/@notjustd
 
 ## 📱 React-Native {#react-native}
 
-Unistyles 2.0
+[![Unistyles 2.0](/emails/issues/167/unistyles20.jpg)](https://www.youtube.com/@notjustdev/live?sub_confirmation=1)
+
+[**Welcome to Unistyles 2.0!**](https://www.reactnativecrossroads.com/posts/unistyles-2-preview)
 
 Unistyles is a cross-platform styling library. It is built as a superset of StyleSheet (if you use React Native, you’re probably familiar with StyleSheet.create …) similar to how TypeScript is a superset of JavaScript. First released just three months ago, it has since gained over 500 stars on GitHub and is now approaching its second major version with enhanced TypeScript types, no dependence on React Context anymore, and fresh C++ bindings to boost performance. A very interesting new feature is the addition of plugin support, which could enable some interesting new use cases.
 
@@ -110,8 +112,6 @@ https://twitter.com/Baconbrix/status/1735011941431595149
 ---
 
 ## 🔀 Other {#other}
-
-<Todo />
 
 - 📜 [HTML: The Bad Parts](https://www.htmhell.dev/adventcalendar/2023/13/)
 - 📜 [CSS @scope](https://12daysofweb.dev/2023/css-scope/): A better way to scope component styles
