--- a/website/newsletter/167/index.mdx
+++ b/website/newsletter/167/index.mdx
@@ -35,8 +35,15 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 ## ⚛️ React {#react}
 
 - 💸 [Take the Developer Nation Survey - A virtual goody bag packed with free data, promo codes for event tickets, courses, tools & platforms is waiting at the end of the survey!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad3)
+- 👀 [Remix PR - unstable_serverBundles to split your route tree](https://github.com/remix-run/remix/pull/8332)
+- 📖 [Updated Next.js testing docs](https://nextjs.org/docs/app/building-your-application/testing)
+- 📒 [New book: React Interview Guide: Learn all you need to know to ace any React interview and land your dream job](https://www.amazon.com/React-Interview-Guide-Learn-interview/dp/1803241519/ref=tmm_pap_swatch_0?link_from_packtlink=yes)
+- 📖 [React Docs Update](https://github.com/reactwg/server-components/discussions/7) + https://twitter.com/SzymonRybczak/status/1736784354213335184
+- 📜 [Access the Search Params of a Request in Remix](https://sergiodxa.com/tutorials/access-the-search-params-of-a-request-in-remix)
+- 📜 [The Complete Guide To React Suspense](https://www.debugbear.com/blog/guide-to-react-suspense)
 - 📜 [Explaining React's cache Function](https://unicorn-utterances.com/posts/explaining-reacts-cache-function)
 - 📜 [What is React Suspense and Async Rendering?](https://unicorn-utterances.com/posts/what-is-react-suspense-and-async-rendering)
+- 📜 [Netlify’s Disingenuous Survey-based Attack on Next.js (and Eleventy, too)](https://www.zachleat.com/web/netlify-and-nextjs/) + [https://www.netlify.com/pdf/the-state-of-web-development-2023.pdf/](https://www.netlify.com/pdf/the-state-of-web-development-2023.pdf/) (keep it private)
 - 📜 [Announcing React Hydration Overlay - Easily Squash Hydration Errors](https://www.builder.io/blog/announcing-react-hydration-overlay): Adds a handy overlay to Next.js sites via a Webpack Plugin that helps with debugging hydration errors.
 - 📜 [How to Get Rid of “Window is Not Defined” and Hydration Mismatch Errors in Next.js](https://medium.com/@eric.burel/how-to-get-rid-of-window-is-not-defined-and-hydration-mismatch-errors-in-next-js-567cc51b4a17)
 - 📜 [React State Management in 2024](https://dev.to/nguyenhongphat0/react-state-management-in-2024-5e7l): Good overview of different approaches to state management - Reducer-based, Atom-based, and Mutable-based.
@@ -45,19 +52,11 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 - 📜 [What is Reactivity?](https://unicorn-utterances.com/posts/what-is-reactivity): Very good explanation of what Reactivity means exactly, including nice visualizations and code samples.
 - 📜 [TasteJS Movies - A non-trivial Movies app built in multiple frameworks](https://tastejs.com/movies/): The same app built with Next, Angular, NuxtJS, Astro, SolidJS, Svelte, …
 - 📜 [Migrating from Jest to Vitest for your React Application](https://dev.to/opensauced/migrating-from-jest-to-vitest-for-your-react-application-1b75)
-- 📖 [Updated Next.js testing docs](https://nextjs.org/docs/app/building-your-application/testing)
-- 📒 [New book: React Interview Guide: Learn all you need to know to ace any React interview and land your dream job](https://www.amazon.com/React-Interview-Guide-Learn-interview/dp/1803241519/ref=tmm_pap_swatch_0?link_from_packtlink=yes)
 - 📦 [Remix 2.4.0 with client data](https://github.com/remix-run/remix/blob/main/CHANGELOG.md#v240): The first Remix release to land their Client Data RFC, which allows querying data APIs directly from the client (skipping the server).
 - 📦 [next-export-i18n 3.0 - App Router support](https://github.com/martinkr/next-export-i18n)
+- 📦 [React-Glow - mouse-tracing glow effect](https://github.com/codaworks/react-glow)
+- 📦 XState React 4.0? https://twitter.com/DavidKPiano/status/1735678671019454757
 - 🎥 [React server components from scratch](https://www.youtube.com/watch?v=MaebEqhZR84): Best way to really understand something is to build it from scratch. This is a 20 minute video of doing just that for RSC.
-- 📦 [Remix PR - unstable_serverBundles to split your route tree](https://github.com/remix-run/remix/pull/8332)
-- [React-Glow - mouse-tracing glow effect](https://github.com/codaworks/react-glow)
-- [Netlify’s Disingenuous Survey-based Attack on Next.js (and Eleventy, too)](https://www.zachleat.com/web/netlify-and-nextjs/) + [https://www.netlify.com/pdf/the-state-of-web-development-2023.pdf/](https://www.netlify.com/pdf/the-state-of-web-development-2023.pdf/) (keep it private)
-- [https://x.com/asidorenko\_/status/1737175314055278778?s=20](https://x.com/asidorenko_/status/1737175314055278778?s=20)
-- [React Docs Update](https://github.com/reactwg/server-components/discussions/7) + https://twitter.com/SzymonRybczak/status/1736784354213335184
-- [Access the Search Params of a Request in Remix](https://sergiodxa.com/tutorials/access-the-search-params-of-a-request-in-remix)
-- [The Complete Guide To React Suspense](https://www.debugbear.com/blog/guide-to-react-suspense)
-- XState React 4.0? https://twitter.com/DavidKPiano/status/1735678671019454757
 
 <SubscribeFormEmbed placement="middle" />
 
