--- a/website/newsletter/167/index.mdx
+++ b/website/newsletter/167/index.mdx
@@ -35,10 +35,9 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 ## ⚛️ React {#react}
 
 - 💸 [Take the Developer Nation Survey - A virtual goody bag packed with free data, promo codes for event tickets, courses, tools & platforms is waiting at the end of the survey!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad3)
-- 👀 [Remix PR - unstable_serverBundles to split your route tree](https://github.com/remix-run/remix/pull/8332)
-- 📖 [Updated Next.js testing docs](https://nextjs.org/docs/app/building-your-application/testing)
-- 📒 [New book: React Interview Guide: Learn all you need to know to ace any React interview and land your dream job](https://www.amazon.com/React-Interview-Guide-Learn-interview/dp/1803241519/ref=tmm_pap_swatch_0?link_from_packtlink=yes)
-- 📖 [React Docs Update](https://github.com/reactwg/server-components/discussions/7) + https://twitter.com/SzymonRybczak/status/1736784354213335184
+- 👀 [Remix PR - unstable_serverBundles - split your route tree](https://github.com/remix-run/remix/pull/8332)
+- 📖 [Updated Next.js testing docs - using App Router and TypeScript](https://nextjs.org/docs/app/building-your-application/testing)
+- 📖 [React Docs Update](https://github.com/reactwg/server-components/discussions/7): an overview of all the new official docs pages that were recently published on React.dev, including `use`, `cache`, `form` + https://twitter.com/SzymonRybczak/status/1736784354213335184
 - 📜 [Access the Search Params of a Request in Remix](https://sergiodxa.com/tutorials/access-the-search-params-of-a-request-in-remix)
 - 📜 [The Complete Guide To React Suspense](https://www.debugbear.com/blog/guide-to-react-suspense)
 - 📜 [Explaining React's cache Function](https://unicorn-utterances.com/posts/explaining-reacts-cache-function)
