--- a/website/newsletter/167/index.mdx
+++ b/website/newsletter/167/index.mdx
@@ -34,28 +34,34 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 ## ⚛️ React {#react}
 
+- 📜 [Announcing React Hydration Overlay - Easily Squash Hydration Errors](https://www.builder.io/blog/announcing-react-hydration-overlay): Adds a handy overlay to Next.js sites via a Webpack Plugin that helps with debugging hydration errors.
+
+---
+
+- 📜 [Concurrent React, External Stores, and Tearing](https://interbolt.org/blog/react-ui-tearing/): An advanced article explaining how React can end up displaying an inconsistent UI (tearing). `useSyncExternalStore` helps to render a consistent UI, but it can also de-optimize your React transitions. See also the [Tearable Dots interactive demo](https://tearabledots.com/).
+
+---
+
 - 💸 [Take the Developer Nation Survey - A virtual goody bag packed with free data, promo codes for event tickets, courses, tools & platforms is waiting at the end of the survey!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad3)
 - 👀 [Remix PR - unstable_serverBundles - split your route tree](https://github.com/remix-run/remix/pull/8332)
 - 📖 [Updated Next.js testing docs - using App Router and TypeScript](https://nextjs.org/docs/app/building-your-application/testing)
-- 📖 [React Docs Update](https://github.com/reactwg/server-components/discussions/7): an overview of all the new official docs pages that were recently published on React.dev, including `use`, `cache`, `form` + https://twitter.com/SzymonRybczak/status/1736784354213335184
-- 📜 [Access the Search Params of a Request in Remix](https://sergiodxa.com/tutorials/access-the-search-params-of-a-request-in-remix)
-- 📜 [The Complete Guide To React Suspense](https://www.debugbear.com/blog/guide-to-react-suspense)
-- 📜 [Explaining React's cache Function](https://unicorn-utterances.com/posts/explaining-reacts-cache-function)
-- 📜 [What is React Suspense and Async Rendering?](https://unicorn-utterances.com/posts/what-is-react-suspense-and-async-rendering)
-- 📜 [Netlify’s Disingenuous Survey-based Attack on Next.js (and Eleventy, too)](https://www.zachleat.com/web/netlify-and-nextjs/) + [https://www.netlify.com/pdf/the-state-of-web-development-2023.pdf/](https://www.netlify.com/pdf/the-state-of-web-development-2023.pdf/) (keep it private)
-- 📜 [Announcing React Hydration Overlay - Easily Squash Hydration Errors](https://www.builder.io/blog/announcing-react-hydration-overlay): Adds a handy overlay to Next.js sites via a Webpack Plugin that helps with debugging hydration errors.
-- 📜 [How to Get Rid of “Window is Not Defined” and Hydration Mismatch Errors in Next.js](https://medium.com/@eric.burel/how-to-get-rid-of-window-is-not-defined-and-hydration-mismatch-errors-in-next-js-567cc51b4a17)
+- 📖 [React Docs Update](https://github.com/reactwg/server-components/discussions/7): an overview of all the new official docs pages that were recently published on React.dev, including `use`, `cache`, `form` and many other experimental/canary APIs.
+- 📜 [Explaining React's cache Function](https://unicorn-utterances.com/posts/explaining-reacts-cache-function): interactive article presenting the experimental React API, and how it differs from `useMemo`. It permits cross-component caching and can be used to preload data.
+- 📜 [Netlify’s Disingenuous Survey-based Attack on Next.js (and Eleventy, too)](https://www.zachleat.com/web/netlify-and-nextjs/): Eleventy creator's criticism of how Netlify presented their State of Web Dev survey results.
+- 📜 [How to Get Rid of “Window is Not Defined” and Hydration Mismatch Errors in Next.js](https://medium.com/@eric.burel/how-to-get-rid-of-window-is-not-defined-and-hydration-mismatch-errors-in-next-js-567cc51b4a17): Shares 5 tips to avoid React hydration problems.
 - 📜 [React State Management in 2024](https://dev.to/nguyenhongphat0/react-state-management-in-2024-5e7l): Good overview of different approaches to state management - Reducer-based, Atom-based, and Mutable-based.
-- 📜 [React Tricks: Fast, Fit and Fun](https://molefrog.com/notes/react-tricks?utm_source=tldrwebdev): Lessons learned from building Wouter, a React router with 2.1 Kb bundle size.
+- 📜 [React Tricks: Fast, Fit and Fun](https://molefrog.com/notes/react-tricks): Lessons learned from building Wouter, a React router with 2.1 Kb bundle size.
 - 📜 [Upcoming React and React-Native Conferences for 2024](https://thoughtbot.com/blog/upcoming-react-and-react-native-conferences-for-2024)
-- 📜 [What is Reactivity?](https://unicorn-utterances.com/posts/what-is-reactivity): Very good explanation of what Reactivity means exactly, including nice visualizations and code samples.
-- 📜 [TasteJS Movies - A non-trivial Movies app built in multiple frameworks](https://tastejs.com/movies/): The same app built with Next, Angular, NuxtJS, Astro, SolidJS, Svelte, …
+- 📜 [What is Reactivity?](https://unicorn-utterances.com/posts/what-is-reactivity)
+- 📜 [What are React Server Actions?](https://unicorn-utterances.com/posts/what-are-react-server-actions)
+- 📜 [What is React Suspense and Async Rendering?](https://unicorn-utterances.com/posts/what-is-react-suspense-and-async-rendering)
+- 📜 [The Complete Guide To React Suspense](https://www.debugbear.com/blog/guide-to-react-suspense)
 - 📜 [Migrating from Jest to Vitest for your React Application](https://dev.to/opensauced/migrating-from-jest-to-vitest-for-your-react-application-1b75)
+- 📜 [Access the Search Params of a Request in Remix](https://sergiodxa.com/tutorials/access-the-search-params-of-a-request-in-remix)
 - 📦 [Remix 2.4.0 with client data](https://github.com/remix-run/remix/blob/main/CHANGELOG.md#v240): The first Remix release to land their Client Data RFC, which allows querying data APIs directly from the client (skipping the server).
 - 📦 [next-export-i18n 3.0 - App Router support](https://github.com/martinkr/next-export-i18n)
-- 📦 [React-Glow - mouse-tracing glow effect](https://github.com/codaworks/react-glow)
-- 📦 XState React 4.0? https://twitter.com/DavidKPiano/status/1735678671019454757
-- 🎥 [React server components from scratch](https://www.youtube.com/watch?v=MaebEqhZR84): Best way to really understand something is to build it from scratch. This is a 20 minute video of doing just that for RSC.
+- 📦 [React-Glow - Mouse-tracing glow effect](https://github.com/codaworks/react-glow)
+- 🎥 [Ben Holmes - React server components from scratch](https://www.youtube.com/watch?v=MaebEqhZR84): a great video showing how to implement a full RSC setup from scratch, including streaming, bundling, component routing, handling SSR, resolving client references...
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -125,7 +131,6 @@ https://twitter.com/Baconbrix/status/1735011941431595149
 - 📦 [date-fns 3.0](https://blog.date-fns.org/v3-is-out/): Now in 100% TypeScript
 - 📦 [Deno 1.39 - The Return of WebGPU](https://deno.com/blog/v1.39)
 - 📦 [Rsbuild 0.2](https://github.com/web-infra-dev/rsbuild/releases/tag/v0.2.0) + [https://twitter.com/jait_chen/status/1734399660121571335](https://twitter.com/jait_chen/status/1734399660121571335)
-- 📦 [Node Version Manager Desktop - desktop app to manage node.js versions.](https://github.com/1111mp/nvm-desktop?utm_source=substack&utm_medium=email)
 - 📦 [Syntax.js 2.0 - lightweight, and easy-to-use, JavaScript library for code syntax highlighting](https://github.com/williamtroup/Syntax.js/releases/tag/2.0.0)
 - 📦 [TSDiagram - Create diagrams and plan your code with TypeScript](https://github.com/3rd/tsdiagram)
 - 📦 [Effection 3.0 - Structured Concurrency and Effects for JavaScript](https://frontside.com/blog/2023-12-18-announcing-effection-v3/)
