--- a/website/newsletter/167/index.mdx
+++ b/website/newsletter/167/index.mdx
@@ -8,7 +8,7 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+Happy new year merry christmas
 
 <!-- truncate -->
 
@@ -34,11 +34,17 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 ## ⚛️ React {#react}
 
-- 📜 [Announcing React Hydration Overlay - Easily Squash Hydration Errors](https://www.builder.io/blog/announcing-react-hydration-overlay): Adds a handy overlay to Next.js sites via a Webpack Plugin that helps with debugging hydration errors.
+[![**React Aria Components 1.0**](/emails/issues/167/reactaria.jpg)](https://react-spectrum.adobe.com/releases/2023-12-20.html)
+
+[**React Aria Components 1.0**](https://react-spectrum.adobe.com/releases/2023-12-20.html)
+
+Devon just 🐦 [announced](https://twitter.com/devongovett/status/1737516074663362843) the stable release of React Aria Components 1.0. Over 40 components with built-in behavior, adaptive interactions, top-tier accessibility, and internationalization out of the box, ready for your styles.
 
 ---
 
-- 📜 [Concurrent React, External Stores, and Tearing](https://interbolt.org/blog/react-ui-tearing/): An advanced article explaining how React can end up displaying an inconsistent UI (tearing). `useSyncExternalStore` helps to render a consistent UI, but it can also de-optimize your React transitions. See also the [Tearable Dots interactive demo](https://tearabledots.com/).
+[![**React Hydration Overlay**](/emails/issues/167/reactaria.jpg)](https://www.builder.io/blog/announcing-react-hydration-overlay)
+
+[**React Hydration Overlay - Easily Squash Hydration Errors**](https://www.builder.io/blog/announcing-react-hydration-overlay): Adds a handy overlay to Next.js sites via a Webpack Plugin that helps with debugging hydration errors.
 
 ---
 
@@ -46,10 +52,11 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 - 👀 [Remix PR - unstable_serverBundles - split your route tree](https://github.com/remix-run/remix/pull/8332)
 - 📖 [Updated Next.js testing docs - using App Router and TypeScript](https://nextjs.org/docs/app/building-your-application/testing)
 - 📖 [React Docs Update](https://github.com/reactwg/server-components/discussions/7): an overview of all the new official docs pages that were recently published on React.dev, including `use`, `cache`, `form` and many other experimental/canary APIs.
+- 📜 [Concurrent React, External Stores, and Tearing](https://interbolt.org/blog/react-ui-tearing/): An advanced article explaining how React can end up displaying an inconsistent UI (tearing). `useSyncExternalStore` helps to render a consistent UI, but it can also de-optimize your React transitions. See also the [Tearable Dots interactive demo](https://tearabledots.com/).
 - 📜 [Explaining React's cache Function](https://unicorn-utterances.com/posts/explaining-reacts-cache-function): interactive article presenting the experimental React API, and how it differs from `useMemo`. It permits cross-component caching and can be used to preload data.
 - 📜 [Netlify’s Disingenuous Survey-based Attack on Next.js (and Eleventy, too)](https://www.zachleat.com/web/netlify-and-nextjs/): Eleventy creator's criticism of how Netlify presented their State of Web Dev survey results.
 - 📜 [How to Get Rid of “Window is Not Defined” and Hydration Mismatch Errors in Next.js](https://medium.com/@eric.burel/how-to-get-rid-of-window-is-not-defined-and-hydration-mismatch-errors-in-next-js-567cc51b4a17): Shares 5 tips to avoid React hydration problems.
-- 📜 [React Tricks: Fast, Fit and Fun](https://molefrog.com/notes/react-tricks): Lessons learned from building Wouter, a React router.
+- 📜 [React Tricks: Fast, Fit and Fun](https://molefrog.com/notes/react-tricks): React perf lessons learned from building Wouter, a React router.
 - 📜 [Upcoming React and React-Native Conferences for 2024](https://thoughtbot.com/blog/upcoming-react-and-react-native-conferences-for-2024)
 - 📜 [What is Reactivity?](https://unicorn-utterances.com/posts/what-is-reactivity)
 - 📜 [What are React Server Actions?](https://unicorn-utterances.com/posts/what-are-react-server-actions)
@@ -97,44 +104,31 @@ Unistyles is a cross-platform styling library. It is built as a superset of Styl
 ---
 
 - 💸 [AnimateReactNative - Premium and Custom React Native animations](https://www.animatereactnative.com/?utm_source=thisweekinreact.com)
-- 📖 [Expo Guide on How to use the New Architecture](https://docs.expo.dev/guides/new-architecture/): All expo-\* packages with the exception of expo-updates already support the new architecture. Support for `expo-updates` is planned for Expo SDK 51.
-- 📖 [Introducing docs.infinite.red — A New Home for Infinite Red’s Documentation](https://shift.infinite.red/introducing-docs-infinite-red-a-new-home-for-infinite-reds-documentation-6f4b25f7a1a4): New docs site for Ignite, Reactotron, RN MLKit, Gluegun
-- 🐦 [Expo visualized](https://x.com/Baconbrix/status/1736791464267403276): A nice visualization of how JavaScript files are transformed in parallel across all threads to bundle as fast as possible
+- 🐦 [Evan Bacon - "Expo Router v3 now has full support for popular web libraries like Radix, Tailwind, Shadcn UI, etc.](https://twitter.com/Baconbrix/status/1735011941431595149)
+- 📖 [Expo Guide on How to use the New Architecture](https://docs.expo.dev/guides/new-architecture/): All `expo-*` packages except expo-updates support the new architecture. Support for `expo-updates` is planned for Expo SDK 51.
+- 📜 [Expo 2023 - The year in review](https://expo.dev/changelog/2023/12-20-2023-year-in-review): An overview of everything Expo launched this year, including Expo Orbit, Expo Router, EAS improvements, 3 SDKs, Expo Modules API and much more.
 - 📜 [Xcode 15.1 image is now available on EAS Build](https://expo.dev/changelog/2023/12-19-eas-build-xcode-15.1-image): Xcode 15.1 primarily fixes bugs.
 - 📜 [Building AR face masks in React Native](https://blog.logrocket.com/building-ar-face-masks-react-native/): How to load and apply 3D face masks using DeepAR
 - 📜 [Optimizing Performance in React-Native: Tips and Techniques](https://thoughtbot.com/blog/optimizing-performance-in-react-native-tips-and-techniques): Tutorial on how to apply memoization, use virtualized lists, optimize images, debounce, optimize bundle size and network requests
+- 📜 [Introducing docs.infinite.red — A New Home for Infinite Red’s Documentation - Ignite, Reactotron, RN MLKit, Gluegun](https://shift.infinite.red/introducing-docs-infinite-red-a-new-home-for-infinite-reds-documentation-6f4b25f7a1a4)
 - 📜 [Universal Medusa: The why, when and how of universal e-commerce apps with Medusa.js, Expo and Next.js](https://bidah.hashnode.dev/universal-medusa-the-why-when-and-how-of-universal-e-commerce-apps-with-medusajs-expo-and-nextjs)
 - 📦 [React Native 0.73.1 is out](https://github.com/facebook/react-native/releases/tag/v0.73.1): Adds `enableNetworkInspector` to enable Network panel and CDP handlers in inspector proxy, bumps CLI to 12.3.0
-- 📦 [React Native Windows 0.73.1 is out](https://github.com/microsoft/react-native-windows/releases/tag/react-native-windows_v0.73.1): Brings React Native 0.73.0 to Windows
-- 🎥 [Ignite 9 video overview by Jamon Holmgren](https://youtu.be/QmkMsUYrTlk?si=p9rvLM-EMggZNcft) (11 minutes)
+- 📦 [React Native Windows 0.73.1 is out](https://github.com/microsoft/react-native-windows/releases/tag/react-native-windows_v0.73.1): Brings React Native 0.73 to Windows
+- 🎥 [Ignite 9 video overview by Jamon Holmgren](https://youtu.be/QmkMsUYrTlk?si=p9rvLM-EMggZNcft)
 - 🎙️ [Rocket Ship #021 - The React Native IDE with Krzysztof Magiera](https://podcast.galaxies.dev/episodes/021-the-react-native-ide-with-krzysztof-magiera)
-- 🎙️ [React Native Radio 283 - From side-project to acquisition!](https://reactnativeradio.com/episodes/rnr-283-from-side-hustle-to-top-charts-with-simon-reggiani) (30 minutes)
-
-https://twitter.com/Baconbrix/status/1735011941431595149
+- 🎙️ [React Native Radio 283 - From side-project to acquisition!](https://reactnativeradio.com/episodes/rnr-283-from-side-hustle-to-top-charts-with-simon-reggiani)
 
 ---
 
 ## 🔀 Other {#other}
 
-- 📜 [HTML: The Bad Parts](https://www.htmhell.dev/adventcalendar/2023/13/)
-- 📜 [CSS @scope](https://12daysofweb.dev/2023/css-scope/): A better way to scope component styles
-- 📜 ["Why would I choose Panda CSS?"](https://www.astahmer.dev/posts/why-would-i-choose-panda-css)
-- 📜 [The await event horizon in JavaScript](https://frontside.com/blog/2023-12-11-await-event-horizon/)
-- 📜 [New to the web platform in December](https://web.dev/blog/web-platform-12-2023)
-- 📖 [The web is getting observables:](https://github.com/WICG/observable) Observable API proposal for more ergonomic and composable event handling
 - 📖 [tsdocs.dev - browse type documentation for npm packages](https://tsdocs.dev/)
-- 📦 [Tailwind CSS v3.4: Dynamic viewport units, :has() support, balanced headlines, subgrid, and more](https://tailwindcss.com/blog/tailwindcss-v3-4)
-- 📦 [Node.js v21.5.0 is out:](https://nodejs.org/en/blog/release/v21.5.0) new dependency to parse JSON efficiently, --trace-promises flag to help debug promises
-- 📦 [Eleventy 3.0 alpha - ESM/async config support](https://www.zachleat.com/web/eleventy-v3-alpha/): Upcoming major release of the static site generator
+- 📜 [New to the web platform in December](https://web.dev/blog/web-platform-12-2023)
+- 📜 [The await event horizon in JavaScript](https://frontside.com/blog/2023-12-11-await-event-horizon/)
+- 📦 [Tailwind CSS v3.4: Dynamic viewport units, `:has()` support, balanced headlines, subgrid, and more](https://tailwindcss.com/blog/tailwindcss-v3-4)
 - 📦 [SvelteKit 2.0 - Vite 5, shallow routing, prepating for Svelte 5](https://svelte.dev/blog/sveltekit-2)
-- 📦 [date-fns 3.0](https://blog.date-fns.org/v3-is-out/): Now in 100% TypeScript
-- 📦 [Deno 1.39 - The Return of WebGPU](https://deno.com/blog/v1.39)
-- 📦 [Rsbuild 0.2](https://github.com/web-infra-dev/rsbuild/releases/tag/v0.2.0) + [https://twitter.com/jait_chen/status/1734399660121571335](https://twitter.com/jait_chen/status/1734399660121571335)
-- 📦 [Syntax.js 2.0 - lightweight, and easy-to-use, JavaScript library for code syntax highlighting](https://github.com/williamtroup/Syntax.js/releases/tag/2.0.0)
+- 📦 [date-fns 3.0 - TypeScript rewrite, ESM and other date features](https://blog.date-fns.org/v3-is-out/)
 - 📦 [TSDiagram - Create diagrams and plan your code with TypeScript](https://github.com/3rd/tsdiagram)
-- 📦 [Effection 3.0 - Structured Concurrency and Effects for JavaScript](https://frontside.com/blog/2023-12-18-announcing-effection-v3/)
-- 📦 [Spotlight: Sentry for Development](https://blog.sentry.io/sentry-for-development/) + [https://twitter.com/astrodotbuild/status/1732432683018469481](https://twitter.com/astrodotbuild/status/1732432683018469481)
-- 📦 [Tailwind CSS v3.4: Dynamic viewport units, :has() support, balanced headlines, subgrid, and more](https://tailwindcss.com/blog/tailwindcss-v3-4)
 
 ## 🤭 Fun {#fun}
 
