--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/167/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/167/index.mdx
@@ -1,14 +1,19 @@
 ---
 slug: /167
-title: "React Hebdo #167: ..."
+title: "React Hebdo #167: This Week In React #167: Aria Components, Hydration, Remix, Server Components, useSyncExternalStore, cache, perf, Glow, Unistyles, Expo, Tailwind, date-fns..."
 authors: [slorber]
 date: 12-19-2023
-unlisted: true
 ---
 
 Salut à tous !
 
-<Todo />
+Once again this week, we have a good mix of articles and releases.
+
+Firefox 121 is out, making [CSS `:has()`](https://twitter.com/stefanjudis/status/1737366970566053927) officially cross-browser supported 🥲
+
+That's the last issue of the year. The newsletter should be back on January 3.
+
+Happy New Year and Merry Christmas everyone, and thank you for reading me throughout the year ❤️️
 
 <!-- truncate -->
 
@@ -34,9 +39,42 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 ## ⚛️ React {#react}
 
-<Todo />
+[![**React Aria Components 1.0**](/emails/issues/167/reactaria.jpg)](https://react-spectrum.adobe.com/releases/2023-12-20.html)
+
+[**React Aria Components 1.0**](https://react-spectrum.adobe.com/releases/2023-12-20.html)
+
+Devon vient 🐦 [d'annoncer](https://twitter.com/devongovett/status/1737516074663362843) la sortie stable de React Aria Components 1.0. Plus de 40 composants avec un comportement intégré, des interactions adaptatives, une très bonne accessibilité et un support internationalisation, prêt à être adapté à vos styles.
+
+---
+
+[![**React Hydration Overlay**](/emails/issues/167/hydration.jpg)](https://www.builder.io/blog/announcing-react-hydration-overlay)
+
+[**React Hydration Overlay - Easily Squash Hydration Errors**](https://www.builder.io/blog/announcing-react-hydration-overlay)
+
+Un tout nouveau projet qui permet d'ajouter un overlay d'erreur très pratique pour aider à debugger les erreurs d'hydratation avec une vue diff. Pour l'instant, cela peut être ajouté aux sites Next.js grâce à un plugin Webpack, mais il s'agit d'une fonctionnalité attendue que nous espérons voir intégrée dans React core prochainement.
+
+---
 
 - 💸 [Take the Developer Nation Survey - A virtual goody bag packed with free data, promo codes for event tickets, courses, tools & platforms is waiting at the end of the survey!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad3)
+- 👀 [Remix PR - unstable_serverBundles - split your route tree](https://github.com/remix-run/remix/pull/8332)
+- 📖 [React Docs Update](https://github.com/reactwg/server-components/discussions/7): une vue d'ensemble de toutes les nouvelles pages de documentation officielles qui ont été récemment publiées sur React.dev, y compris `use`, `cache`, `form` et beaucoup d'autres API expérimentales/canaries. Il y a même une section "Coming Soon" référençant les docs pour les nouvelles [static resource preloading APIs](https://github.com/reactjs/react.dev/pull/6459).
+- 📖 [Updated Next.js testing docs - using App Router and TypeScript](https://nextjs.org/docs/app/building-your-application/testing)
+- 📜 [Concurrent React, External Stores, and Tearing](https://interbolt.org/blog/react-ui-tearing/): article avancé expliquant comment React peut finir par afficher une interface utilisateur incohérente (tearing). `useSyncExternalStore` aide à rendre une interface cohérente, mais il peut aussi désoptimiser vos transitions React. Voir aussi la [demo intéractive Tearable Dots](https://tearabledots.com/).
+- 📜 [Explaining React's cache Function](https://unicorn-utterances.com/posts/explaining-reacts-cache-function): article interactif présentant l'API expérimentale React, et en quoi elle diffère de `useMemo`. Elle permet la mise en cache partagée entre plusieurs composants et peut être utilisée pour précharger des données.
+- 📜 [How to Get Rid of “Window is Not Defined” and Hydration Mismatch Errors in Next.js](https://medium.com/@eric.burel/how-to-get-rid-of-window-is-not-defined-and-hydration-mismatch-errors-in-next-js-567cc51b4a17): partage 5 conseils pour éviter les problèmes d'hydratation de React.
+- 📜 [React Tricks: Fast, Fit and Fun](https://molefrog.com/notes/react-tricks): leçons de performance apprises lors de la création de Wouter, un micro-routeur pour React.
+- 📜 [Netlify’s Disingenuous Survey-based Attack on Next.js (and Eleventy, too)](https://www.zachleat.com/web/netlify-and-nextjs/): critique du créateur d'Eleventy sur la manière dont Netlify a présenté les résultats de son sondage State of Web Dev.
+- 📜 [Upcoming React and React-Native Conferences for 2024](https://thoughtbot.com/blog/upcoming-react-and-react-native-conferences-for-2024)
+- 📜 [What is Reactivity?](https://unicorn-utterances.com/posts/what-is-reactivity)
+- 📜 [What are React Server Actions?](https://unicorn-utterances.com/posts/what-are-react-server-actions)
+- 📜 [What is React Suspense and Async Rendering?](https://unicorn-utterances.com/posts/what-is-react-suspense-and-async-rendering)
+- 📜 [The Complete Guide To React Suspense](https://www.debugbear.com/blog/guide-to-react-suspense)
+- 📜 [Migrating from Jest to Vitest for your React Application](https://dev.to/opensauced/migrating-from-jest-to-vitest-for-your-react-application-1b75)
+- 📜 [Access the Search Params of a Request in Remix](https://sergiodxa.com/tutorials/access-the-search-params-of-a-request-in-remix)
+- 📦 [Remix 2.4.0 with client data](https://github.com/remix-run/remix/blob/main/CHANGELOG.md#v240): première version de Remix à proposer une implémentation de la RFC Client Data, qui permet d'interroger les API de données directement à partir du client via `clientLoader` et `clientAction`.
+- 📦 [React-Glow - Mouse-tracing glow effect](https://github.com/codaworks/react-glow)
+- 📦 [next-export-i18n 3.0 - App Router support](https://github.com/martinkr/next-export-i18n)
+- 🎥 [Ben Holmes - React server components from scratch](https://www.youtube.com/watch?v=MaebEqhZR84): une excellente vidéo montrant comment mettre en œuvre une configuration RSC complète à partir de zéro, y compris le streaming, le bundling, le routage des composants, la gestion des SSR, la résolution des références client...
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -64,7 +102,29 @@ _PS: Subscribe to our_ [**_YouTube channel_**](https://www.youtube.com/@notjustd
 
 ## 📱 React-Native {#react-native}
 
+[![Unistyles 2.0](/emails/issues/167/unistyles20.jpg)](https://www.youtube.com/@notjustdev/live?sub_confirmation=1)
+
+[**Welcome to Unistyles 2.0!**](https://www.reactnativecrossroads.com/posts/unistyles-2-preview)
+
+Unistyles est une lib de style cross-platform. Elle est construite comme un surensemble de StyleSheet (si vous utilisez React Native, vous êtes probablement familier avec StyleSheet.create ...) similaire à la façon dont TypeScript est un surensemble de JavaScript. Publié pour la première fois il y a seulement trois mois, il a depuis gagné plus de 500 étoiles sur GitHub et approche maintenant de sa deuxième version majeure avec des types TypeScript améliorés, la dépendance à React Context retirée, et de nouveaux bindings C++ pour améliorer les performances. Une nouvelle fonctionnalité très intéressante est l'ajout du support des plugins, qui pourrait permettre de nouveaux cas d'utilisation.
+
+---
+
 - 💸 [AnimateReactNative - Premium and Custom React Native animations](https://www.animatereactnative.com/?utm_source=thisweekinreact.com)
+- 🐦 [Evan Bacon - "Expo Router v3 now has full support for popular web libraries like Radix, Tailwind, Shadcn UI, etc.](https://twitter.com/Baconbrix/status/1735011941431595149)
+- 📖 [Expo Guide on How to use the New Architecture](https://docs.expo.dev/guides/new-architecture/): tous les paquets `expo-*` sauf expo-updates supportent la nouvelle architecture. Le support de `expo-updates` est prévu pour Expo SDK 51.
+- 📜 [Expo 2023 - The year in review](https://expo.dev/changelog/2023/12-20-2023-year-in-review): un aperçu de tout ce qu'Expo a lancé cette année, y compris Expo Orbit, Expo Router, les améliorations EAS, 3 SDK, Expo Modules API et bien plus encore.
+- 📜 [Xcode 15.1 image is now available on EAS Build](https://expo.dev/changelog/2023/12-19-eas-build-xcode-15.1-image): Xcode 15.1 fixe quelques bugs.
+- 📜 [Optimizing Performance in React-Native: Tips and Techniques](https://thoughtbot.com/blog/optimizing-performance-in-react-native-tips-and-techniques): traite l'application de memo, l'utilisation de listes virtualisées, l'optimisation des images, le debouncing, l'optimisation réseau.
+- 📜 [Building AR face masks in React Native](https://blog.logrocket.com/building-ar-face-masks-react-native/): comment charger et appliquer des masques 3D à l'aide de DeepAR ?
+- 📜 [Introducing docs.infinite.red — A New Home for Infinite Red’s Documentation - Ignite, Reactotron, RN MLKit, Gluegun](https://shift.infinite.red/introducing-docs-infinite-red-a-new-home-for-infinite-reds-documentation-6f4b25f7a1a4)
+- 📜 [Universal Medusa: The why, when and how of universal e-commerce apps with Medusa.js, Expo and Next.js](https://bidah.hashnode.dev/universal-medusa-the-why-when-and-how-of-universal-e-commerce-apps-with-medusajs-expo-and-nextjs)
+- 📦 [React Native 0.73.1 is out](https://github.com/facebook/react-native/releases/tag/v0.73.1): ajout de `enableNetworkInspector` pour activer le panneau réseau et les gestionnaires CDP dans inspector proxy, passage du CLI à la version 12.3.0
+- 📦 [React Native Windows 0.73.1 is out](https://github.com/microsoft/react-native-windows/releases/tag/react-native-windows_v0.73.1): React Native 0.73 pour Windows
+- 📦 [Repack 3.7 - 0.73 compat](https://github.com/callstack/repack/releases/tag/%40callstack%2Frepack%403.7.0)
+- 🎥 [Ignite 9 video overview by Jamon Holmgren](https://youtu.be/QmkMsUYrTlk?si=p9rvLM-EMggZNcft)
+- 🎙️ [Rocket Ship #021 - The React Native IDE with Krzysztof Magiera](https://podcast.galaxies.dev/episodes/021-the-react-native-ide-with-krzysztof-magiera)
+- 🎙️ [React Native Radio 283 - From side-project to acquisition!](https://reactnativeradio.com/episodes/rnr-283-from-side-hustle-to-top-charts-with-simon-reggiani)
 
 ---
 
@@ -81,14 +141,19 @@ _PS: Subscribe to our_ [**_YouTube channel_**](https://www.youtube.com/@notjustd
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- 📖 [tsdocs.dev - browse type documentation for npm packages](https://tsdocs.dev/)
+- 📜 [New to the web platform in December](https://web.dev/blog/web-platform-12-2023)
+- 📜 [The await event horizon in JavaScript](https://frontside.com/blog/2023-12-11-await-event-horizon/)
+- 📦 [Node.js v21.5.0 - parse JSON efficiently, adding a `--trace-promises` flag](https://nodejs.org/en/blog/release/v21.5.0)
+- 📦 [Tailwind CSS v3.4: Dynamic viewport units, `:has()` support, balanced headlines, subgrid, and more](https://tailwindcss.com/blog/tailwindcss-v3-4)
+- 📦 [SvelteKit 2.0 - Vite 5, shallow routing, prepating for Svelte 5](https://svelte.dev/blog/sveltekit-2)
+- 📦 [date-fns 3.0 - TypeScript rewrite, ESM and other date features](https://blog.date-fns.org/v3-is-out/)
+- 📦 [TSDiagram - Create diagrams and plan your code with TypeScript](https://github.com/3rd/tsdiagram)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/167/meme.jpg)](https://twitter.com/sebastienlorber/status/1737380479383277636)
 
 A plus 👋
