--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/167/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/167/index.mdx
@@ -1,19 +1,19 @@
 ---
 slug: /167
-title: "React Hebdo #167: This Week In React #167: Aria Components, Hydration, Remix, Server Components, useSyncExternalStore, cache, perf, Glow, Unistyles, Expo, Tailwind, date-fns..."
+title: "React Hebdo #167: Aria Components, Hydration, Remix, Server Components, useSyncExternalStore, cache, perf, Glow, Unistyles, Expo, Tailwind, date-fns..."
 authors: [slorber]
 date: 12-19-2023
 ---
 
 Salut à tous !
 
-Once again this week, we have a good mix of articles and releases.
+Cette semaine encore, nous avons un bon mélange d'articles et de releases.
 
-Firefox 121 is out, making [CSS `:has()`](https://twitter.com/stefanjudis/status/1737366970566053927) officially cross-browser supported 🥲
+Firefox 121 est sorti, rendant [CSS `:has()`](https://twitter.com/stefanjudis/status/1737366970566053927) officiellement compatible avec tous les navigateurs 🥲
 
-That's the last issue of the year. The newsletter should be back on January 3.
+C'est le dernier numéro de l'année. La newsletter devrait être de retour le 3 janvier.
 
-Happy New Year and Merry Christmas everyone, and thank you for reading me throughout the year ❤️️
+Bonne année et joyeux Noël à tous, et merci de m'avoir lu tout au long de l'année ❤️️
 
 <!-- truncate -->
 
